# addchin

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
docs/superpowers/plans/: 2026-06-18-addchin-public-release.md
docs/superpowers/specs/: 2026-06-18-addchin-public-design.md
src/addchin/: __init__.py  anki.py  cache.py  chinese.py  cli.py  config.py  doctor.py  llm.py  templates.py
src/addchin/data/cache/: cards.json
src/addchin/data/lists/: hsk1.txt
tests/: test_anki.py  test_cache.py  test_chinese.py  test_chinese_audio.py  test_cli_fields.py  test_cli_main.py  test_config.py  test_doctor.py  test_llm.py  test_templates.py
