[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "addchin"
version = "0.1.0"
description = "Turn a list of Chinese words into fully-formed Anki flashcards."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.109.2",
    "requests>=2.28",
    "pypinyin>=0.49",
    "opencc-python-reimplemented>=0.1.7",
    "edge-tts>=6.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
addchin = "addchin.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/addchin"]
